# aoslab

./: .gitignore  LICENSE  Notes  README.md
os/: Cargo.toml  Makefile
os/src/: consts.rs  context.rs  init.rs  interrupt.rs  io.rs  lib.rs  link_user.S  main.rs  sbi.rs  syscall.rs  test.rs  timer.rs
os/src/algorithm/src/scheduler/: mod.rs
os/src/boot/: linker64.ld
os/src/fs/: file.rs  inode_ext.rs  mod.rs  stdio.rs
os/src/interrupt/: handler.rs
os/src/kernel/: fs.rs  process.rs  syscall.rs
os/src/memory/: frame_allocator.rs  mod.rs
os/src/memory/memory_set/: area.rs  handler.rs  mod.rs
os/src/process/: mod.rs  processor.rs  structs.rs  thread.rs  thread_pool.rs
os/src/rcore-fs/: Cargo.toml  README.md
os/src/rcore-fs/rcore-fs-lfs/: Cargo.toml
os/src/rcore-fs/rcore-fs-lfs/src/: lib.rs  structs.rs
os/src/rcore-fs/rcore-fs-sfs/src/: lib.rs
user/: Cargo.toml  Makefile  rcore-lfs-fuse
user/src/: console.rs  syscall.rs
usr/: Makefile
usr/rust/: Cargo.toml
usr/rust/src/: io.rs  syscall.rs
utils/: aoslab-lfs.cfg  trace_sim.py
