[package]
name = "user"
version = "0.1.0"
authors = ["Yiwei Li <liyw19@mails.tsinghua.edu.cn>", "Zhiyao Li <lizhiyao19@mails.tsinghua.edu.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buddy_system_allocator = "0.3.9"